--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "browserify": "^12.0.1",
     "fs-jetpack": "^0.7.0",
     "gulp": "^3.9.0",
+    "gulp-sass": "^2.1.0",
     "gulp-util": "^3.0.7"
   }
 }
