--- a/package.json
+++ b/package.json
@@ -14,10 +14,14 @@
   "devDependencies": {
     "babel-preset-es2015": "^6.1.18",
     "babelify": "^7.2.0",
+    "browser-sync": "^2.10.0",
     "browserify": "^12.0.1",
-    "fs-jetpack": "^0.7.0",
     "gulp": "^3.9.0",
+    "gulp-clean": "^0.3.1",
     "gulp-sass": "^2.1.0",
-    "gulp-util": "^3.0.7"
+    "gulp-uglify": "^1.5.1",
+    "gulp-util": "^3.0.7",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0"
   }
 }
